# epilepsy-ml-pipeline

./: README.md
epilepsy-ml-pipeline/: LICENSE  README.md  mkdocs.yml  pyproject.toml
epilepsy-ml-pipeline/docs/: index.md
epilepsy-ml-pipeline/src/epilepsy_ml/: __init__.py  classic.py  cli.py  data.py  deep.py  features.py  pipeline.py  preprocess.py
epilepsy-ml-pipeline/tests/: test_synthetic.py
experiments/: run_classical.py
src/data/: synthetic.py
src/features/: extractor.py
src/models/: classical.py  deep.py
src/preprocessing/: pipeline.py
src/training/: train.py
src/utils/: seed.py
