[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epilepsy-ml-pipeline"
version = "0.1.0"
description = "EEG-based seizure prediction baselines (SVM, RF, LSTM, CNN, CNN+LSTM)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Saniya Vaish" }]
dependencies = [
  "numpy", "scipy", "scikit-learn", "pandas", "typer",
  "torch", "matplotlib", "joblib"
]

[project.scripts]
epiml = "epilepsy_ml.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "black", "isort", "flake8", "mypy"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]
